apache-config.yaml
apiVersion: v1
kind: Pod
metadata:
  name: apache-config
  labels:
    app: my-apache
spec:
  volumes:
  - name: apache-config-volume-blue
    hostPath:
      path: /home/docker/apache-config-blue
  - name: apache-config-volume-green
    hostPath:
      path: /home/docker/apache-config-green
  containers:
  - image: httpd
    name: httpd-blue
    ports:
    - containerPort: 80
    volumeMounts:
    - mountPath: /usr/local/apache2/htdocs
      name: apache-config-volume-blue
  - image: httpd
    name: httpd-green
    ports:
    - containerPort: 80
    volumeMounts:
    - mountPath: /usr/local/apache2/htdocs
      name: apache-config-volume-green
  - image: ubuntu
    name: ubuntu
    volumeMounts:
    - mountPath: /apache-volume-blue
      name: apache-config-volume-blue
    - mountPath: /apache-volume-green
      name: apache-config-volume-green
    command: ["/bin/sh", "-c",
        "echo \"Welcome to BLUE Apache2!\" >/apache-volume-blue/index.html ;
        echo \"Welcome to GREEN Apache2!\" >/apache-volume-green/index.html ;
        touch /tmp/healthy ;
        sleep 120 ;
        touch /tmp/ready ;
        sleep 300 ;
        rm -f /tmp/healthy ;
        tail -f /dev/null"]
    livenessProbe:
      exec:
        command:
        - cat
        - /tmp/healthy
      initialDelaySeconds: 3
      failureThreshold: 5
      periodSeconds: 30
    readinessProbe:
      exec:
        command:
        - cat
        - /tmp/ready
      initialDelaySeconds: 5 
      periodSeconds: 20
