service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-page
spec:
  selector:
    app: web-server-blue
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
