service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-page
spec:
  selector:
    app: web-server-green
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
